@@ -16,14 +16,12 @@ import java.lang.annotation.Target;
  * multiple {@code DefaultQualifier} annotations are in scope, the innermost one takes precedence.
  * DefaultQualifier takes precedence over {@link DefaultQualifierInHierarchy}.
  *
- * <p>If you wish to write multiple {@code @DefaultQualifier} annotations (for unrelated type
- * systems, or with different {@code locations} fields) at the same location, use {@link
- * DefaultQualifiers}.
+ * <p>You may write multiple {@code @DefaultQualifier} annotations (for unrelated type systems, or
+ * with different {@code locations} fields) at the same location.
  *
  * <p>This annotation currently has no effect in stub files.
  *
  * @see org.checkerframework.framework.qual.TypeUseLocation
- * @see DefaultQualifiers
  * @see DefaultQualifierInHierarchy
  * @see DefaultFor
  * @checker_framework.manual #defaults Default qualifier for unannotated types
