@@ -10,10 +10,18 @@ import java.lang.annotation.Target;
  * Specifies the annotations to be included in a type without having to provide them explicitly.
  *
  * <p>This annotation permits specifying multiple default qualifiers for more than one type system.
- * It is necessary because Java forbids multiple annotations of the same name at a single location.
+ * It is generally not used by programmers, because Java permits writing multiple annotations of the
+ * same name at a single location and internally creates this wrapper annotation.
  *
- * <p>Example:
+ * <p>Example: The following two code snippets have identical effect.
  * <!-- &nbsp; is a hack that prevents @ from being the first character on the line, which confuses Javadoc -->
+ *
+ * <pre>
+ * &nbsp; @DefaultQualifier(NonNull.class)
+ * &nbsp; @DefaultQualifier(value = Interned.class, locations = ALL_EXCEPT_LOCALS)
+ * &nbsp; @DefaultQualifier(Tainted.class)
+ * &nbsp; class MyClass { ... }
+ * </pre>
  *
  * <pre>
  * &nbsp; @DefaultQualifiers({
@@ -21,6 +29,7 @@ import java.lang.annotation.Target;
  * &nbsp;     @DefaultQualifier(value = Interned.class, locations = ALL_EXCEPT_LOCALS),
  * &nbsp;     @DefaultQualifier(Tainted.class)
  * &nbsp; })
+ * &nbsp; class MyClass { ... }
  * </pre>
  *
  * This annotation currently has no effect in stub files.
